[gd_scene load_steps=22 format=3 uid="uid://cpeow0wwcd843"]

[ext_resource type="Script" path="res://Entities/Enemy/Cthulhu/Script/cthulhu.gd" id="1_70qqm"]
[ext_resource type="Script" path="res://Entities/Common/StateMachine/state_machine.gd" id="2_o7xks"]
[ext_resource type="Texture2D" uid="uid://b4x6p1unxdqh2" path="res://Scenes/Environment/BossRoom/Tilemap/TableLeg.png" id="3_esh1b"]
[ext_resource type="Script" path="res://Entities/Enemy/Cthulhu/Script/idle.gd" id="3_kkrql"]
[ext_resource type="Script" path="res://Entities/Enemy/Cthulhu/Script/arm_slam.gd" id="4_p0sml"]
[ext_resource type="Texture2D" uid="uid://bhpeau0xji43d" path="res://Entities/Enemy/Cthulhu/Sprite/Cthulhu_Head_Idle-Sheet.png" id="4_tltvl"]
[ext_resource type="Script" path="res://Entities/Enemy/Cthulhu/Script/summon.gd" id="5_bpx0s"]
[ext_resource type="Script" path="res://Entities/Enemy/Cthulhu/Script/laser_beam.gd" id="6_td0wy"]
[ext_resource type="Script" path="res://Entities/Enemy/Cthulhu/Script/bullet_hell.gd" id="7_eb1oe"]
[ext_resource type="Script" path="res://Entities/Enemy/Cthulhu/Script/state_distributer.gd" id="8_a3b4o"]
[ext_resource type="Texture2D" uid="uid://byi3a7qlvvyvk" path="res://Entities/Enemy/Cthulhu/Sprite/CthulhuHead.png" id="10_xe4c7"]
[ext_resource type="PackedScene" uid="uid://fs40lc64h0n5" path="res://Entities/Enemy/Cthulhu/healthbar.tscn" id="12_2tgkl"]
[ext_resource type="Texture2D" uid="uid://s5uxuxso0ib1" path="res://Entities/Common/Sprite/Light.png" id="12_wskrv"]

[sub_resource type="Animation" id="Animation_t15r4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/ArmLeft:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-191, -128)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/ArmRight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(192, -128)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites/ArmRight:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprites/ArmLeft:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_clks1"]
resource_name = "slam"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/ArmLeft:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-191, -128), Vector2(-221, -291)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/ArmRight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(192, -128), Vector2(203, -293)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites/ArmRight:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprites/ArmLeft:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.466667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yrf7h"]
_data = {
"RESET": SubResource("Animation_t15r4"),
"slam": SubResource("Animation_clks1")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_f1sw2"]
radius = 102.005

[sub_resource type="Animation" id="Animation_vqk5j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/AgroHead:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [20]
}

[sub_resource type="Animation" id="Animation_e86qn"]
resource_name = "idle"
length = 1.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_kum43"]
resource_name = "agro"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/AgroHead:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25, 26, 27, 28]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ri81x"]
_data = {
"RESET": SubResource("Animation_vqk5j"),
"agro": SubResource("Animation_kum43"),
"idle": SubResource("Animation_e86qn")
}

[node name="Cthulhu" type="CharacterBody2D"]
texture_filter = 1
collision_layer = 2
collision_mask = 2
script = ExtResource("1_70qqm")

[node name="Sprites" type="Node2D" parent="."]
position = Vector2(1, -35)

[node name="ArmLeft" type="Sprite2D" parent="Sprites"]
position = Vector2(-191, -128)
texture = ExtResource("3_esh1b")

[node name="ArmRight" type="Sprite2D" parent="Sprites"]
position = Vector2(192, -128)
rotation = 3.14159
scale = Vector2(1, -1)
texture = ExtResource("3_esh1b")

[node name="HeadShadow" type="Sprite2D" parent="Sprites"]
modulate = Color(0, 0, 0, 0.4)
position = Vector2(-2, -52)
scale = Vector2(1.10947, 0.990718)
texture = ExtResource("10_xe4c7")

[node name="Head" type="Sprite2D" parent="Sprites"]
position = Vector2(0, -136)
texture = ExtResource("4_tltvl")
hframes = 32

[node name="AgroHead" type="Sprite2D" parent="Sprites"]
visible = false
position = Vector2(0, -136)
texture = ExtResource("4_tltvl")
hframes = 32
frame = 20

[node name="PointLight2D" type="PointLight2D" parent="Sprites"]
position = Vector2(-30, -173)
color = Color(0.95, 0.038, 0.3724, 0.968627)
energy = 1.47
texture = ExtResource("12_wskrv")
texture_scale = 3.0

[node name="PointLight2D2" type="PointLight2D" parent="Sprites"]
position = Vector2(31, -172)
color = Color(0.95, 0.038, 0.3724, 0.968627)
energy = 1.47
texture = ExtResource("12_wskrv")
texture_scale = 3.0

[node name="StateMachine" type="Node2D" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_o7xks")
initial_state = NodePath("Idle")

[node name="Idle" type="Node2D" parent="StateMachine"]
script = ExtResource("3_kkrql")

[node name="Timer" type="Timer" parent="StateMachine/Idle"]
wait_time = 2.0

[node name="ArmSlam" type="Node2D" parent="StateMachine"]
script = ExtResource("4_p0sml")

[node name="LeftSocket" type="Node2D" parent="StateMachine/ArmSlam"]
position = Vector2(-80, -153)

[node name="RightSocket" type="Node2D" parent="StateMachine/ArmSlam"]
position = Vector2(97, -186)

[node name="Summon" type="Node2D" parent="StateMachine"]
script = ExtResource("5_bpx0s")
lower_bound = Vector2(-1100, -1000)
upper_bound = Vector2(-250, -129)

[node name="LaserBeam" type="Node2D" parent="StateMachine"]
position = Vector2(0, -208)
script = ExtResource("6_td0wy")

[node name="BulletHell" type="Node2D" parent="StateMachine"]
script = ExtResource("7_eb1oe")

[node name="StateDistributer" type="Node2D" parent="StateMachine"]
script = ExtResource("8_a3b4o")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yrf7h")
}

[node name="Healthbar" parent="." instance=ExtResource("12_2tgkl")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -182)
shape = SubResource("CircleShape2D_f1sw2")

[node name="HeadAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ri81x")
}
speed_scale = 0.5

[connection signal="timeout" from="StateMachine/Idle/Timer" to="StateMachine/Idle" method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/ArmSlam" method="_on_animation_player_animation_finished"]
